...
            color = MaterialTheme.colorScheme.error,
            style = MaterialTheme.typography.bodySmall,
            modifier = Modifier
                .padding(start = 16.dp, top = 4.dp)
                .visibilityBy { errorMessage.isNotEmpty() }
                .semantics {
                    testTag = "UsernameTextFieldError"
                },
        )
    }
}

